--- a/index.html
+++ b/index.html
@@ -53,24 +53,36 @@
           <h2 class="visually-hidden">About us</h2>
           <ul class="skills-list">
             <li class="skills-item">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="skills-title">Strategy</h3>
               <p class="skills-text">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li class="skills-item">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="skills-title">Punctuality</h3>
               <p class="skills-text">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li class="skills-item">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="skills-title">Diligence</h3>
               <p class="skills-text">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="skills-item">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="skills-title">Technologies</h3>
               <p class="skills-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -91,6 +103,9 @@
               <div class="team-name-wrapper">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <svg class="" width="12" height="12">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </div>
             </li>
             <li class="team-item">
