--- a/index.html
+++ b/index.html
@@ -311,6 +311,39 @@
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
+        <div class="footer-container">
+          <h4 class="footer-contact">Social media</h4>
+          <ul class="team-icon">
+            <li class="team-icon-item">
+              <a href="" class="team-link">
+                <svg class="team-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-icon-item">
+              <a href="" class="team-link">
+                <svg class="team-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-icon-item">
+              <a href="" class="team-link">
+                <svg class="team-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-icon-item">
+              <a href="" class="team-link">
+                <svg class="team-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
