--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="header-nav">
           <a href="./index.html" class="header-logo">Web<span class="header-logo-web">Studio</span></a>
           <ul class="header-menu">
-            <li><a href="./index.html" class="header-menu-item header-menu-studio">Studio</a></li>
+            <li><a href="./index.html" class="header-menu-item current">Studio</a></li>
             <li><a href="" class="header-menu-item">Portfolio</a></li>
             <li><a href="" class="header-menu-item">Contacts</a></li>
           </ul>
