--- a/index.html
+++ b/index.html
@@ -306,13 +306,15 @@
     <!-- footer -->
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
-        <div class="footer-container">
-          <h4 class="footer-contact">Social media</h4>
+      <div class="container footer-container">
+        <div class="footer-container-info">
+          <a href="./index.html" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-icon">
+          <p class="footer-contact">Social media</p>
           <ul class="team-icon">
             <li class="team-icon-item">
               <a href="" class="team-link">
