--- a/index.html
+++ b/index.html
@@ -317,28 +317,28 @@
           <p class="footer-contact">Social media</p>
           <ul class="team-icon">
             <li class="team-icon-item">
-              <a href="" class="team-link">
+              <a href="" class="team-link footer-link">
                 <svg class="team-link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="team-icon-item">
-              <a href="" class="team-link">
+              <a href="" class="team-link footer-link">
                 <svg class="team-link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="team-icon-item">
-              <a href="" class="team-link">
+              <a href="" class="team-link footer-link">
                 <svg class="team-link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="team-icon-item">
-              <a href="" class="team-link">
+              <a href="" class="team-link footer-link">
                 <svg class="team-link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
