--- a/index.html
+++ b/index.html
@@ -53,36 +53,44 @@
           <h2 class="visually-hidden">About us</h2>
           <ul class="skills-list">
             <li class="skills-item">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="skills-icon">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Strategy</h3>
               <p class="skills-text">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li class="skills-item">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="skills-icon">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Punctuality</h3>
               <p class="skills-text">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li class="skills-item">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="skills-icon">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Diligence</h3>
               <p class="skills-text">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="skills-item">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="skills-icon">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Technologies</h3>
               <p class="skills-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
