--- a/index.html
+++ b/index.html
@@ -265,42 +265,78 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/img31.jpg" alt="Banking App" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img31.jpg" alt="Banking App" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img41.jpg" alt="Cashless Payment" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img41.jpg" alt="Cashless Payment" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img51.jpg" alt="Meditation App" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img51.jpg" alt="Meditation App" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img61.jpg" alt="Taxi Service" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img61.jpg" alt="Taxi Service" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img71.jpg" alt="Screen Illustrations" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img71.jpg" alt="Screen Illustrations" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img81.jpg" alt="Online Courses" width="360" height="300" class="images" />
+              <div class="portfolio-element">
+                <img src="./images/img81.jpg" alt="Online Courses" width="360" height="300" class="images" />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-wrapper">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
